feat: add usdce pool to arbi core pools

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
-    "ARB_CORE_POOLS = [\"RDNT-WETH\", \"rETH-bb-a-WETH-BPT\", \"50wstETH-50WETH\", \"50wstETH-BPT-50bbaUSD\", \"wstETH/rETH/cbETH\"]\n",
+    "ARB_CORE_POOLS = [\"RDNT-WETH\", \"rETH-bb-a-WETH-BPT\", \"50wstETH-50WETH\", \"50wstETH-BPT-50bbaUSD\", \"wstETH/rETH/cbETH\", \"50USDC-50USDC.e\"]\n",
     "ARB_BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "# Arb block time is .3 seconds\n",
     "ARB_CHAIN_BLOCK_TIME = 0.27"
@@ -26,15 +26,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:51:08.765451Z",
-     "start_time": "2023-08-11T11:51:08.757714Z"
+     "end_time": "2023-08-11T11:53:42.422408Z",
+     "start_time": "2023-08-11T11:53:42.414082Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -65,8 +65,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:51:08.765986Z",
-     "start_time": "2023-08-11T11:51:08.761279Z"
+     "end_time": "2023-08-11T11:53:42.426091Z",
+     "start_time": "2023-08-11T11:53:42.417601Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "import os\n",
@@ -142,8 +142,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:51:23.402702Z",
-     "start_time": "2023-08-11T11:51:08.769127Z"
+     "end_time": "2023-08-11T11:53:58.246273Z",
+     "start_time": "2023-08-11T11:53:42.424993Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "outputs": [
     {
      "data": {
-      "text/plain": "                           pool_fee           time_from             time_to  \\\nRDNT-WETH              12414.284916 2023-07-28 21:36:02 2023-08-11 14:46:53   \nrETH-bb-a-WETH-BPT         0.000000 2023-07-28 21:36:02 2023-08-11 14:46:53   \n50wstETH-50WETH            2.018571 2023-07-28 21:36:02 2023-08-11 14:46:53   \n50wstETH-BPT-50bbaUSD      1.033910 2023-07-28 21:36:02 2023-08-11 14:46:53   \nwstETH/rETH/cbETH         21.035821 2023-07-28 21:36:02 2023-08-11 14:46:53   \n\n                                 pool_symbol     chain  \nRDNT-WETH                          RDNT-WETH  Arbitrum  \nrETH-bb-a-WETH-BPT        rETH-bb-a-WETH-BPT  Arbitrum  \n50wstETH-50WETH              50wstETH-50WETH  Arbitrum  \n50wstETH-BPT-50bbaUSD  50wstETH-BPT-50bbaUSD  Arbitrum  \nwstETH/rETH/cbETH          wstETH/rETH/cbETH  Arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>12414.284916</td>\n      <td>2023-07-28 21:36:02</td>\n      <td>2023-08-11 14:46:53</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>0.000000</td>\n      <td>2023-07-28 21:36:02</td>\n      <td>2023-08-11 14:46:53</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50WETH</th>\n      <td>2.018571</td>\n      <td>2023-07-28 21:36:02</td>\n      <td>2023-08-11 14:46:53</td>\n      <td>50wstETH-50WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-BPT-50bbaUSD</th>\n      <td>1.033910</td>\n      <td>2023-07-28 21:36:02</td>\n      <td>2023-08-11 14:46:53</td>\n      <td>50wstETH-BPT-50bbaUSD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>21.035821</td>\n      <td>2023-07-28 21:36:02</td>\n      <td>2023-08-11 14:46:53</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                           pool_fee           time_from             time_to  \\\nRDNT-WETH              12414.282233 2023-07-28 21:39:13 2023-08-11 14:49:31   \nrETH-bb-a-WETH-BPT         0.000000 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50wstETH-50WETH            2.018571 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50wstETH-BPT-50bbaUSD      1.033910 2023-07-28 21:39:13 2023-08-11 14:49:31   \nwstETH/rETH/cbETH         21.035821 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50USDC-50USDC.e           38.525948 2023-07-28 21:39:13 2023-08-11 14:49:31   \n\n                                 pool_symbol     chain  \nRDNT-WETH                          RDNT-WETH  Arbitrum  \nrETH-bb-a-WETH-BPT        rETH-bb-a-WETH-BPT  Arbitrum  \n50wstETH-50WETH              50wstETH-50WETH  Arbitrum  \n50wstETH-BPT-50bbaUSD  50wstETH-BPT-50bbaUSD  Arbitrum  \nwstETH/rETH/cbETH          wstETH/rETH/cbETH  Arbitrum  \n50USDC-50USDC.e              50USDC-50USDC.e  Arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>12414.282233</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>0.000000</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50WETH</th>\n      <td>2.018571</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50wstETH-50WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-BPT-50bbaUSD</th>\n      <td>1.033910</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50wstETH-BPT-50bbaUSD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>21.035821</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50USDC-50USDC.e</th>\n      <td>38.525948</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50USDC-50USDC.e</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 59,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,8 +196,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:51:23.425978Z",
-     "start_time": "2023-08-11T11:51:23.404736Z"
+     "end_time": "2023-08-11T11:53:58.272606Z",
+     "start_time": "2023-08-11T11:53:58.252878Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
