feat: add bba-usd

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
-    "ARB_CORE_POOLS = [\"RDNT-WETH\", \"rETH-bb-a-WETH-BPT\", \"50wstETH-50WETH\", \"50wstETH-BPT-50bbaUSD\", \"wstETH/rETH/cbETH\", \"50USDC-50USDC.e\"]\n",
+    "ARB_CORE_POOLS = [\"RDNT-WETH\", \"bb-a-USD\", \"50wstETH-50WETH\", \"50wstETH-BPT-50bbaUSD\", \"wstETH/rETH/cbETH\", \"50USDC-50USDC.e\"]\n",
     "ARB_BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "# Arb block time is .3 seconds\n",
     "ARB_CHAIN_BLOCK_TIME = 0.27"
@@ -26,15 +26,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:53:42.422408Z",
-     "start_time": "2023-08-11T11:53:42.414082Z"
+     "end_time": "2023-08-11T12:04:09.808416Z",
+     "start_time": "2023-08-11T12:04:09.795124Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -65,8 +65,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:53:42.426091Z",
-     "start_time": "2023-08-11T11:53:42.417601Z"
+     "end_time": "2023-08-11T12:04:09.809162Z",
+     "start_time": "2023-08-11T12:04:09.799432Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "import os\n",
@@ -142,8 +142,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:53:58.246273Z",
-     "start_time": "2023-08-11T11:53:42.424993Z"
+     "end_time": "2023-08-11T12:04:24.828368Z",
+     "start_time": "2023-08-11T12:04:09.806714Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "outputs": [
     {
      "data": {
-      "text/plain": "                           pool_fee           time_from             time_to  \\\nRDNT-WETH              12414.282233 2023-07-28 21:39:13 2023-08-11 14:49:31   \nrETH-bb-a-WETH-BPT         0.000000 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50wstETH-50WETH            2.018571 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50wstETH-BPT-50bbaUSD      1.033910 2023-07-28 21:39:13 2023-08-11 14:49:31   \nwstETH/rETH/cbETH         21.035821 2023-07-28 21:39:13 2023-08-11 14:49:31   \n50USDC-50USDC.e           38.525948 2023-07-28 21:39:13 2023-08-11 14:49:31   \n\n                                 pool_symbol     chain  \nRDNT-WETH                          RDNT-WETH  Arbitrum  \nrETH-bb-a-WETH-BPT        rETH-bb-a-WETH-BPT  Arbitrum  \n50wstETH-50WETH              50wstETH-50WETH  Arbitrum  \n50wstETH-BPT-50bbaUSD  50wstETH-BPT-50bbaUSD  Arbitrum  \nwstETH/rETH/cbETH          wstETH/rETH/cbETH  Arbitrum  \n50USDC-50USDC.e              50USDC-50USDC.e  Arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>12414.282233</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>0.000000</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50WETH</th>\n      <td>2.018571</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50wstETH-50WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-BPT-50bbaUSD</th>\n      <td>1.033910</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50wstETH-BPT-50bbaUSD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>21.035821</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50USDC-50USDC.e</th>\n      <td>38.525948</td>\n      <td>2023-07-28 21:39:13</td>\n      <td>2023-08-11 14:49:31</td>\n      <td>50USDC-50USDC.e</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                           pool_fee      swap_fee           time_from  \\\nRDNT-WETH              12398.196417  19977.241927 2023-07-28 21:51:06   \nbb-a-USD                   0.000000    226.508114 2023-07-28 21:51:06   \n50wstETH-50WETH            2.018571      2.309078 2023-07-28 21:51:06   \n50wstETH-BPT-50bbaUSD      1.033910      2.255742 2023-07-28 21:51:06   \nwstETH/rETH/cbETH         21.035821     28.382376 2023-07-28 21:51:06   \n50USDC-50USDC.e           38.525948     45.386401 2023-07-28 21:51:06   \n\n                                  time_to            pool_symbol     chain  \nRDNT-WETH             2023-08-11 14:59:57              RDNT-WETH  Arbitrum  \nbb-a-USD              2023-08-11 14:59:57               bb-a-USD  Arbitrum  \n50wstETH-50WETH       2023-08-11 14:59:57        50wstETH-50WETH  Arbitrum  \n50wstETH-BPT-50bbaUSD 2023-08-11 14:59:57  50wstETH-BPT-50bbaUSD  Arbitrum  \nwstETH/rETH/cbETH     2023-08-11 14:59:57      wstETH/rETH/cbETH  Arbitrum  \n50USDC-50USDC.e       2023-08-11 14:59:57        50USDC-50USDC.e  Arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>12398.196417</td>\n      <td>19977.241927</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>0.000000</td>\n      <td>226.508114</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>bb-a-USD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50WETH</th>\n      <td>2.018571</td>\n      <td>2.309078</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50wstETH-50WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-BPT-50bbaUSD</th>\n      <td>1.033910</td>\n      <td>2.255742</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50wstETH-BPT-50bbaUSD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>21.035821</td>\n      <td>28.382376</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50USDC-50USDC.e</th>\n      <td>38.525948</td>\n      <td>45.386401</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50USDC-50USDC.e</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 63,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,14 +179,17 @@
     "arb_fees = {}\n",
     "for pool in ARB_CORE_POOLS:\n",
     "    current_fees_snapshots = [x for x in pool_snapshots_now if x['pool']['symbol'] == pool]\n",
+    "    current_fees_snapshots.sort(key=lambda x: x['timestamp'], reverse=True)\n",
     "    fees_2_weeks_ago = [x for x in pool_snapshots_2_weeks_ago if x['pool']['symbol'] == pool]\n",
+    "    fees_2_weeks_ago.sort(key=lambda x: x['timestamp'], reverse=True)\n",
     "    # Take first element of list, which is the most recent snapshot\n",
     "    pool_snapshot_now = current_fees_snapshots[0]\n",
     "    pool_snapshot_2_weeks_ago = fees_2_weeks_ago[0]\n",
     "    # Calculate fees\n",
     "    pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
+    "    pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
     "    arb_fees[pool] = {\n",
-    "        'pool_fee': pool_fee, 'time_from': arb_datetime_2_weeks_ago, 'time_to': arb_datetime_now,'pool_symbol': pool_snapshot_now['pool']['symbol'],\n",
+    "        'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago, 'time_to': arb_datetime_now,'pool_symbol': pool_snapshot_now['pool']['symbol'],\n",
     "        'chain': 'Arbitrum',\n",
     "    }\n",
     "# Convert to dataframe and print:\n",
@@ -196,8 +199,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T11:53:58.272606Z",
-     "start_time": "2023-08-11T11:53:58.252878Z"
+     "end_time": "2023-08-11T12:13:42.184132Z",
+     "start_time": "2023-08-11T12:09:07.058427Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
