--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,11 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
-    "ARB_CORE_POOLS = [\"RDNT-WETH\", \"bb-a-USD\", \"50wstETH-50WETH\", \"50wstETH-BPT-50bbaUSD\", \"wstETH/rETH/cbETH\", \"50USDC-50USDC.e\"]\n",
+    "ARB_CORE_POOLS = [\n",
+    "    \"0xbe0f30217be1e981add883848d0773a86d2d2cd4000000000000000000000471\",\n",
+    "    \"0x36bf227d6bac96e2ab1ebb5492ecec69c691943f000200000000000000000316\",\n",
+    "    \"0x4a2f6ae7f3e5d715689530873ec35593dc28951b000000000000000000000481\",\n",
+    "    \"0xc6eee8cb7643ec2f05f46d569e9ec8ef8b41b389000000000000000000000475\",\n",
+    "    \"0x32df62dc3aed2cd6224193052ce665dc181658410002000000000000000003bd\",\n",
+    "    \"0x45c4d1376943ab28802b995acffc04903eb5223f000000000000000000000470\",\n",
+    "    \"0x9cebf13bb702f253abf1579294694a1edad00eaa000000000000000000000486\",\n",
+    "]\n",
     "ARB_BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "# Arb block time is .3 seconds\n",
     "ARB_CHAIN_BLOCK_TIME = 0.27"
@@ -26,15 +34,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T12:04:09.808416Z",
-     "start_time": "2023-08-11T12:04:09.795124Z"
+     "end_time": "2023-08-14T14:10:36.505463Z",
+     "start_time": "2023-08-14T14:10:36.496842Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -65,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T12:04:09.809162Z",
-     "start_time": "2023-08-11T12:04:09.799432Z"
+     "end_time": "2023-08-14T14:10:36.505929Z",
+     "start_time": "2023-08-14T14:10:36.500373Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import os\n",
@@ -142,8 +150,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T12:04:24.828368Z",
-     "start_time": "2023-08-11T12:04:09.806714Z"
+     "end_time": "2023-08-14T14:10:52.070767Z",
+     "start_time": "2023-08-14T14:10:36.505692Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -160,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "                           pool_fee      swap_fee           time_from  \\\nRDNT-WETH              12398.196417  19977.241927 2023-07-28 21:51:06   \nbb-a-USD                   0.000000    226.508114 2023-07-28 21:51:06   \n50wstETH-50WETH            2.018571      2.309078 2023-07-28 21:51:06   \n50wstETH-BPT-50bbaUSD      1.033910      2.255742 2023-07-28 21:51:06   \nwstETH/rETH/cbETH         21.035821     28.382376 2023-07-28 21:51:06   \n50USDC-50USDC.e           38.525948     45.386401 2023-07-28 21:51:06   \n\n                                  time_to            pool_symbol     chain  \nRDNT-WETH             2023-08-11 14:59:57              RDNT-WETH  Arbitrum  \nbb-a-USD              2023-08-11 14:59:57               bb-a-USD  Arbitrum  \n50wstETH-50WETH       2023-08-11 14:59:57        50wstETH-50WETH  Arbitrum  \n50wstETH-BPT-50bbaUSD 2023-08-11 14:59:57  50wstETH-BPT-50bbaUSD  Arbitrum  \nwstETH/rETH/cbETH     2023-08-11 14:59:57      wstETH/rETH/cbETH  Arbitrum  \n50USDC-50USDC.e       2023-08-11 14:59:57        50USDC-50USDC.e  Arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>12398.196417</td>\n      <td>19977.241927</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>0.000000</td>\n      <td>226.508114</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>bb-a-USD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-50WETH</th>\n      <td>2.018571</td>\n      <td>2.309078</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50wstETH-50WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50wstETH-BPT-50bbaUSD</th>\n      <td>1.033910</td>\n      <td>2.255742</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50wstETH-BPT-50bbaUSD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>21.035821</td>\n      <td>28.382376</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>50USDC-50USDC.e</th>\n      <td>38.525948</td>\n      <td>45.386401</td>\n      <td>2023-07-28 21:51:06</td>\n      <td>2023-08-11 14:59:57</td>\n      <td>50USDC-50USDC.e</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                          pool_fee      swap_fee           time_from  \\\nRDNT-WETH             11341.350457  18742.401366 2023-07-31 22:32:46   \nB-wstETH-WETH-Stable   5397.714232     64.015104 2023-07-31 22:32:46   \nbb-a-USD               3172.079133    875.765654 2023-07-31 22:32:46   \nwstETH-bb-a-WETH-BPT   2004.249838    446.426500 2023-07-31 22:32:46   \nrETH-bb-a-WETH-BPT     1082.792500    318.178761 2023-07-31 22:32:46   \nbbaUSDC/bbaUSDCe        163.814092    201.953956 2023-07-31 22:32:46   \nwstETH/rETH/cbETH        82.043660     67.858882 2023-07-31 22:32:46   \n\n                                 time_to           pool_symbol     chain  \nRDNT-WETH            2023-08-14 17:06:23             RDNT-WETH  Arbitrum  \nB-wstETH-WETH-Stable 2023-08-14 17:06:23  B-wstETH-WETH-Stable  Arbitrum  \nbb-a-USD             2023-08-14 17:06:23              bb-a-USD  Arbitrum  \nwstETH-bb-a-WETH-BPT 2023-08-14 17:06:23  wstETH-bb-a-WETH-BPT  Arbitrum  \nrETH-bb-a-WETH-BPT   2023-08-14 17:06:23    rETH-bb-a-WETH-BPT  Arbitrum  \nbbaUSDC/bbaUSDCe     2023-08-14 17:06:23      bbaUSDC/bbaUSDCe  Arbitrum  \nwstETH/rETH/cbETH    2023-08-14 17:06:23     wstETH/rETH/cbETH  Arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11341.350457</td>\n      <td>18742.401366</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5397.714232</td>\n      <td>64.015104</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3172.079133</td>\n      <td>875.765654</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>bb-a-USD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>2004.249838</td>\n      <td>446.426500</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>318.178761</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>163.814092</td>\n      <td>201.953956</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>bbaUSDC/bbaUSDCe</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,9 +186,9 @@
     "# and then summing across all pools\n",
     "arb_fees = {}\n",
     "for pool in ARB_CORE_POOLS:\n",
-    "    current_fees_snapshots = [x for x in pool_snapshots_now if x['pool']['symbol'] == pool]\n",
+    "    current_fees_snapshots = [x for x in pool_snapshots_now if x['pool']['id'] == pool]\n",
     "    current_fees_snapshots.sort(key=lambda x: x['timestamp'], reverse=True)\n",
-    "    fees_2_weeks_ago = [x for x in pool_snapshots_2_weeks_ago if x['pool']['symbol'] == pool]\n",
+    "    fees_2_weeks_ago = [x for x in pool_snapshots_2_weeks_ago if x['pool']['id'] == pool]\n",
     "    fees_2_weeks_ago.sort(key=lambda x: x['timestamp'], reverse=True)\n",
     "    # Take first element of list, which is the most recent snapshot\n",
     "    pool_snapshot_now = current_fees_snapshots[0]\n",
@@ -188,19 +196,20 @@
     "    # Calculate fees\n",
     "    pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
     "    pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
-    "    arb_fees[pool] = {\n",
+    "    arb_fees[pool_snapshot_now['pool']['symbol']] = {\n",
     "        'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago, 'time_to': arb_datetime_now,'pool_symbol': pool_snapshot_now['pool']['symbol'],\n",
     "        'chain': 'Arbitrum',\n",
     "    }\n",
-    "# Convert to dataframe and print:\n",
+    "# Convert to dataframe, sort by pool_fee descending\n",
     "arb_fees_df = pd.DataFrame.from_dict(arb_fees, orient='index')\n",
+    "arb_fees_df = arb_fees_df.sort_values(by='pool_fee', ascending=False)\n",
     "arb_fees_df"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T12:13:42.184132Z",
-     "start_time": "2023-08-11T12:09:07.058427Z"
+     "end_time": "2023-08-14T14:11:16.077454Z",
+     "start_time": "2023-08-14T14:11:16.075645Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
