feat: remove pool symbol for better reading

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -119,6 +119,7 @@
     "arb_datetime_now = datetime.datetime.fromtimestamp(arb_timestamp_now)\n",
     "arb_datetime_2_weeks_ago = datetime.datetime.fromtimestamp(arb_timestamp_2_weeks_ago)\n",
     "\n",
+    "\n",
     "# Fetch all the data from the balancer subgraph\n",
     "def make_gql_client(url: str) -> Optional[Client]:\n",
     "    transport = RequestsHTTPTransport(url=url, retries=3)\n",
@@ -168,20 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "                          pool_fee      swap_fee           time_from  \\\nRDNT-WETH             11341.350457  18742.401366 2023-07-31 22:32:46   \nB-wstETH-WETH-Stable   5397.714232     64.015104 2023-07-31 22:32:46   \nbb-a-USD               3172.079133    875.765654 2023-07-31 22:32:46   \nwstETH-bb-a-WETH-BPT   2004.249838    446.426500 2023-07-31 22:32:46   \nrETH-bb-a-WETH-BPT     1082.792500    318.178761 2023-07-31 22:32:46   \nbbaUSDC/bbaUSDCe        163.814092    201.953956 2023-07-31 22:32:46   \nwstETH/rETH/cbETH        82.043660     67.858882 2023-07-31 22:32:46   \n\n                                 time_to           pool_symbol     chain  \nRDNT-WETH            2023-08-14 17:06:23             RDNT-WETH  Arbitrum  \nB-wstETH-WETH-Stable 2023-08-14 17:06:23  B-wstETH-WETH-Stable  Arbitrum  \nbb-a-USD             2023-08-14 17:06:23              bb-a-USD  Arbitrum  \nwstETH-bb-a-WETH-BPT 2023-08-14 17:06:23  wstETH-bb-a-WETH-BPT  Arbitrum  \nrETH-bb-a-WETH-BPT   2023-08-14 17:06:23    rETH-bb-a-WETH-BPT  Arbitrum  \nbbaUSDC/bbaUSDCe     2023-08-14 17:06:23      bbaUSDC/bbaUSDCe  Arbitrum  \nwstETH/rETH/cbETH    2023-08-14 17:06:23     wstETH/rETH/cbETH  Arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>pool_symbol</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11341.350457</td>\n      <td>18742.401366</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>RDNT-WETH</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5397.714232</td>\n      <td>64.015104</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3172.079133</td>\n      <td>875.765654</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>bb-a-USD</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>2004.249838</td>\n      <td>446.426500</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>318.178761</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>163.814092</td>\n      <td>201.953956</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>bbaUSDC/bbaUSDCe</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                          pool_fee      swap_fee           time_from  \\\nRDNT-WETH             11341.350457  18742.401366 2023-07-31 22:32:46   \nB-wstETH-WETH-Stable   5397.714232     64.015104 2023-07-31 22:32:46   \nbb-a-USD               3172.079133    875.765654 2023-07-31 22:32:46   \nwstETH-bb-a-WETH-BPT   2004.249838    446.426500 2023-07-31 22:32:46   \nrETH-bb-a-WETH-BPT     1082.792500    318.178761 2023-07-31 22:32:46   \nbbaUSDC/bbaUSDCe        163.814092    201.953956 2023-07-31 22:32:46   \nwstETH/rETH/cbETH        82.043660     67.858882 2023-07-31 22:32:46   \n\n                                 time_to     chain  \nRDNT-WETH            2023-08-14 17:06:23  Arbitrum  \nB-wstETH-WETH-Stable 2023-08-14 17:06:23  Arbitrum  \nbb-a-USD             2023-08-14 17:06:23  Arbitrum  \nwstETH-bb-a-WETH-BPT 2023-08-14 17:06:23  Arbitrum  \nrETH-bb-a-WETH-BPT   2023-08-14 17:06:23  Arbitrum  \nbbaUSDC/bbaUSDCe     2023-08-14 17:06:23  Arbitrum  \nwstETH/rETH/cbETH    2023-08-14 17:06:23  Arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11341.350457</td>\n      <td>18742.401366</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5397.714232</td>\n      <td>64.015104</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3172.079133</td>\n      <td>875.765654</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>2004.249838</td>\n      <td>446.426500</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>318.178761</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>163.814092</td>\n      <td>201.953956</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "# Iterate through snapshots now and 2 weeks ago and extract fee data, by subtracting today's fee data from 2 weeks ago\n",
     "# and then summing across all pools\n",
     "arb_fees = {}\n",
@@ -197,7 +199,8 @@
     "    pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
     "    pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
     "    arb_fees[pool_snapshot_now['pool']['symbol']] = {\n",
-    "        'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago, 'time_to': arb_datetime_now,'pool_symbol': pool_snapshot_now['pool']['symbol'],\n",
+    "        'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago,\n",
+    "        'time_to': arb_datetime_now,\n",
     "        'chain': 'Arbitrum',\n",
     "    }\n",
     "# Convert to dataframe, sort by pool_fee descending\n",
@@ -208,8 +211,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T14:11:16.077454Z",
-     "start_time": "2023-08-14T14:11:16.075645Z"
+     "end_time": "2023-08-14T14:20:13.300809Z",
+     "start_time": "2023-08-14T14:20:13.298486Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
