feat: convert pools parsing to function

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Define constants for Arbitrum:\n",
@@ -34,15 +34,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T14:10:36.505463Z",
-     "start_time": "2023-08-14T14:10:36.496842Z"
+     "end_time": "2023-08-14T15:27:30.535805Z",
+     "start_time": "2023-08-14T15:27:30.525389Z"
     }
    },
    "id": "39d87004addaae1b"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T14:10:36.505929Z",
-     "start_time": "2023-08-14T14:10:36.500373Z"
+     "end_time": "2023-08-14T15:27:30.561002Z",
+     "start_time": "2023-08-14T15:27:30.528996Z"
     }
    },
    "id": "abc722b4fa453b5a"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import os\n",
@@ -151,8 +151,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T14:10:52.070767Z",
-     "start_time": "2023-08-14T14:10:36.505692Z"
+     "end_time": "2023-08-14T15:27:48.122081Z",
+     "start_time": "2023-08-14T15:27:30.539667Z"
     }
    },
    "id": "e1e0b8b90f62234c"
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "                          pool_fee      swap_fee           time_from  \\\nRDNT-WETH             11341.350457  18742.401366 2023-07-31 22:32:46   \nB-wstETH-WETH-Stable   5397.714232     64.015104 2023-07-31 22:32:46   \nbb-a-USD               3172.079133    875.765654 2023-07-31 22:32:46   \nwstETH-bb-a-WETH-BPT   2004.249838    446.426500 2023-07-31 22:32:46   \nrETH-bb-a-WETH-BPT     1082.792500    318.178761 2023-07-31 22:32:46   \nbbaUSDC/bbaUSDCe        163.814092    201.953956 2023-07-31 22:32:46   \nwstETH/rETH/cbETH        82.043660     67.858882 2023-07-31 22:32:46   \n\n                                 time_to     chain  \nRDNT-WETH            2023-08-14 17:06:23  Arbitrum  \nB-wstETH-WETH-Stable 2023-08-14 17:06:23  Arbitrum  \nbb-a-USD             2023-08-14 17:06:23  Arbitrum  \nwstETH-bb-a-WETH-BPT 2023-08-14 17:06:23  Arbitrum  \nrETH-bb-a-WETH-BPT   2023-08-14 17:06:23  Arbitrum  \nbbaUSDC/bbaUSDCe     2023-08-14 17:06:23  Arbitrum  \nwstETH/rETH/cbETH    2023-08-14 17:06:23  Arbitrum  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11341.350457</td>\n      <td>18742.401366</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>5397.714232</td>\n      <td>64.015104</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3172.079133</td>\n      <td>875.765654</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>2004.249838</td>\n      <td>446.426500</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>318.178761</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>163.814092</td>\n      <td>201.953956</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 22:32:46</td>\n      <td>2023-08-14 17:06:23</td>\n      <td>Arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                          pool_fee      swap_fee           time_from  \\\nRDNT-WETH             11312.457142  18710.162660 2023-07-31 23:49:48   \nB-wstETH-WETH-Stable   4811.523704     63.902566 2023-07-31 23:49:48   \nbb-a-USD               3170.140962    864.700164 2023-07-31 23:49:48   \nwstETH-bb-a-WETH-BPT   1997.973898    444.078715 2023-07-31 23:49:48   \nrETH-bb-a-WETH-BPT     1082.792500    317.284404 2023-07-31 23:49:48   \nbbaUSDC/bbaUSDCe        170.757962    204.434808 2023-07-31 23:49:48   \nwstETH/rETH/cbETH        82.043660     67.858882 2023-07-31 23:49:48   \n\n                                 time_to     chain  \nRDNT-WETH            2023-08-14 18:23:14  arbitrum  \nB-wstETH-WETH-Stable 2023-08-14 18:23:14  arbitrum  \nbb-a-USD             2023-08-14 18:23:14  arbitrum  \nwstETH-bb-a-WETH-BPT 2023-08-14 18:23:14  arbitrum  \nrETH-bb-a-WETH-BPT   2023-08-14 18:23:14  arbitrum  \nbbaUSDC/bbaUSDCe     2023-08-14 18:23:14  arbitrum  \nwstETH/rETH/cbETH    2023-08-14 18:23:14  arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pool_fee</th>\n      <th>swap_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>RDNT-WETH</th>\n      <td>11312.457142</td>\n      <td>18710.162660</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>B-wstETH-WETH-Stable</th>\n      <td>4811.523704</td>\n      <td>63.902566</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bb-a-USD</th>\n      <td>3170.140962</td>\n      <td>864.700164</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH-bb-a-WETH-BPT</th>\n      <td>1997.973898</td>\n      <td>444.078715</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>rETH-bb-a-WETH-BPT</th>\n      <td>1082.792500</td>\n      <td>317.284404</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>bbaUSDC/bbaUSDCe</th>\n      <td>170.757962</td>\n      <td>204.434808</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>wstETH/rETH/cbETH</th>\n      <td>82.043660</td>\n      <td>67.858882</td>\n      <td>2023-07-31 23:49:48</td>\n      <td>2023-08-14 18:23:14</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,35 +184,40 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Iterate through snapshots now and 2 weeks ago and extract fee data, by subtracting today's fee data from 2 weeks ago\n",
-    "# and then summing across all pools\n",
-    "arb_fees = {}\n",
-    "for pool in ARB_CORE_POOLS:\n",
-    "    current_fees_snapshots = [x for x in pool_snapshots_now if x['pool']['id'] == pool]\n",
-    "    current_fees_snapshots.sort(key=lambda x: x['timestamp'], reverse=True)\n",
-    "    fees_2_weeks_ago = [x for x in pool_snapshots_2_weeks_ago if x['pool']['id'] == pool]\n",
-    "    fees_2_weeks_ago.sort(key=lambda x: x['timestamp'], reverse=True)\n",
-    "    # Take first element of list, which is the most recent snapshot\n",
-    "    pool_snapshot_now = current_fees_snapshots[0]\n",
-    "    pool_snapshot_2_weeks_ago = fees_2_weeks_ago[0]\n",
-    "    # Calculate fees\n",
-    "    pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
-    "    pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
-    "    arb_fees[pool_snapshot_now['pool']['symbol']] = {\n",
-    "        'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago,\n",
-    "        'time_to': arb_datetime_now,\n",
-    "        'chain': 'Arbitrum',\n",
-    "    }\n",
+    "def collect_fee_info(pools: list[str], chain: str) -> dict:\n",
+    "    # Iterate through snapshots now and 2 weeks ago and extract fee data, by subtracting today's fee data from 2 weeks ago\n",
+    "    # and then summing across all pools\n",
+    "    fees = {}\n",
+    "    for pool in pools:\n",
+    "        current_fees_snapshots = [x for x in pool_snapshots_now if x['pool']['id'] == pool]\n",
+    "        current_fees_snapshots.sort(key=lambda x: x['timestamp'], reverse=True)\n",
+    "        fees_2_weeks_ago = [x for x in pool_snapshots_2_weeks_ago if x['pool']['id'] == pool]\n",
+    "        fees_2_weeks_ago.sort(key=lambda x: x['timestamp'], reverse=True)\n",
+    "        # Take first element of list, which is the most recent snapshot\n",
+    "        pool_snapshot_now = current_fees_snapshots[0]\n",
+    "        pool_snapshot_2_weeks_ago = fees_2_weeks_ago[0]\n",
+    "        # Calculate fees\n",
+    "        pool_fee = float(pool_snapshot_now['protocolFee']) - float(pool_snapshot_2_weeks_ago['protocolFee'])\n",
+    "        pool_swap_fee = float(pool_snapshot_now['swapFees']) - float(pool_snapshot_2_weeks_ago['swapFees'])\n",
+    "        fees[pool_snapshot_now['pool']['symbol']] = {\n",
+    "            'pool_fee': pool_fee, 'swap_fee': pool_swap_fee, 'time_from': arb_datetime_2_weeks_ago,\n",
+    "            'time_to': arb_datetime_now,\n",
+    "            'chain': chain,\n",
+    "        }\n",
+    "    return fees\n",
+    "\n",
+    "arb_fees = collect_fee_info(ARB_CORE_POOLS, 'arbitrum')\n",
     "# Convert to dataframe, sort by pool_fee descending\n",
-    "arb_fees_df = pd.DataFrame.from_dict(arb_fees, orient='index')\n",
+    "joint_fees = {**arb_fees}\n",
+    "arb_fees_df = pd.DataFrame.from_dict(joint_fees, orient='index')\n",
     "arb_fees_df = arb_fees_df.sort_values(by='pool_fee', ascending=False)\n",
     "arb_fees_df"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-14T14:20:13.300809Z",
-     "start_time": "2023-08-14T14:20:13.298486Z"
+     "end_time": "2023-08-14T15:28:24.803280Z",
+     "start_time": "2023-08-14T15:28:24.796667Z"
     }
    },
    "id": "e79b2f6a4ead2cad"
